Shift+number key cannot be typed in the search field
With evolution 3.36.4 on Ubuntu 20.04, when the focus is on the search field in mail, single letter shortcuts that require Shift to be used (on the french keyboard for instance) cannot be used. They are shortcuts instead.
Steps to reproduce the problem:
- Install Ubuntu 20.04 in English with US keyboard
- Install evolution
- Add language French
- Add, via Region & Language, the french alt. keyboard
- Activate the french keyboard
- Launch evolution
- Cancel the setup wizard
- Focus on the search bar
- Type shift-5 and 6
What happens:
- No 5 shows in the search bar, only 6
What is expected:
- The character 5 followed by 6 shows in the search bar