I#1071 - Shift+number key cannot be typed in the search field

Closes https://gitlab.gnome.org/GNOME/evolution/-/issues/1071